# trello_client

./: main.py  pyproject.toml  readme.md
tests/: test_api.py
tests/test_config/: list.txt
trello_client/: api.py  main.py
