[tool.poetry]
name = "trello_client"
version = "0.1.0"
description = ""
authors = ["azat715 <azat715@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
fire = "^0.4.0"

[tool.poetry.dev-dependencies]
black = "pylint"
isort = "^5.7.0"
pylint = "^2.6.0"
mypy = "^0.800"

[tool.poetry.scripts]
trello_client = "trello_client.main:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
